Style partitial book rendering

--- a/public/index0.html
+++ b/public/index0.html
@@ -17,7 +17,7 @@ Description: A wide two-column design suitable for blogs and small websites.
 <title>Personified  by Free Css Templates</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
-<link href="default.css" rel="stylesheet" type="text/css" />
+<link href="stylesheets/default.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <!-- start header -->
